org.mmisw.iserver 
Carlos Rueda  -  http://marinemetadata.org
Created: 2009-05-13

2009-06-06
	- Utf8Util: new utilities (based on jchardet) to detect/verify the required UTF-8 charset
	  for any external stream to be incorporated in the registry (no attempts to do any automated
	  conversions for the moment).
	- Applying UTF-8 verification:
		- when loading a model from the registry: normally, every entry in the registry should be
		  UTF-8 already; however, this is a general sanity check that can be useful in the case of
		  any previously registered entry that may not be UTF-8.
		- before the conversion from CSV in VocabCreator
		- when trying to create an ontology from an external ontology file 
		
	- Util renamed to QueryUtil
	
	- XmlBaseExtractor: removed a strange ``throw new SAXException("No xml:base")'' in the original code;
	  this exception was thrown even when an xml:base element has already been found!
	  
	- Fixed issue #140: "ontologies with no declared namespace for empty prefix are not accepted"
		Util2.getDefaultNamespace(OntModel model, File file, BaseResult baseResult): now return
		the first non-null value in the following order:
			- model.getNsPrefixURI("")
			- XmlBaseExtractor.getXMLBase(...)
			- file.toURI().toString()
		See http://www.w3.org/TR/2003/PR-rdf-syntax-grammar-20031215/#section-Syntax-ID-xml-base
		
		
	  

2009-06-05
	- several adjustments as the main operations are completed
	- removed several interim dependencies
	- some renamings of types and operations
	- support for registering an uploaded file completed

2009-06-04
	- Implemented the "loading" of local file into working space. This is capture in a TempOntologyInfo.
	  (note the uploading operation is still implemented in the ontmd module).
	- Other preparations for registration of an "other" ontology (not vine, nor voc2rdf).
	
	
2009-06-03
	- Instead of using CreateOntologyInfo as a base class for the various types of ontologies to be